# LexiQ

./: .env.example  .gitignore  LICENSE  Makefile  README.md  STRUCTURE.md  app.py  pyproject.toml  requirements.txt
data/dummy_docs/: README.md
scripts/: dev.ps1  dev.sh
src/uae_legal_rag/: __init__.py  app_ui.py  config.py  llm.py  template_checker.py
src/uae_legal_rag/analytics/: sqlite_logger.py
src/uae_legal_rag/graph/: legal_graph.py
src/uae_legal_rag/ingestion/: chunking.py  loaders.py
src/uae_legal_rag/rag/: formatting.py  prompts.py  retriever.py
src/uae_legal_rag/vectorstore/: chroma_client.py
tests/: test_smoke.py
